--- a/frontend/Expense_Tracker/src/index.css
+++ b/frontend/Expense_Tracker/src/index.css
@@ -27,3 +27,9 @@
 .card-btn{
   @apply flex items-center text-[12px] font-medium text-gray-700 hover:text-red-600 bg-gray-50 hover:bg-red-50 px-4 py-1.5 rounded-lg border border-gray-200/50 cursor-pointer;
 }
+.add-btn{
+  @apply flex items-center md:text-xs  gap-1.5  font-medium text-purple-600 whitespace-nowrap bg-purple-50 border border-purple-100 rounded-lg px-4 py-2 cursor-pointer;
+}
+.add-btn-fill{
+@apply text-white bg-primary;
+}
